# efficiency-is-clever-laziness

./: .gitignore  LICENSE  README.md  config.env  desktop.ini  eicl.py  measure_energy_blender.csv  pyproject.toml  requirements.txt  setup.cfg
docs/: blender.md  pycuda.md
eicl/: __init__.py  config.py
eicl/cpu/: blender.py
eicl/cpu_gpu/: __init__.py  blender.py  py_cuda.py  pycuda.py
eicl/gpu/: blender.py
eicl/io/: diskbench.py  ioio.py  test.py
eicl/mixed/: __init__.py  cbtools.py  pymeter.py
tmp/7027e52963d249489c85d1915b210079/: script.py
tmp/a36f64e502514ff98ee45cb01744a742/: script.py
tmp/b6c11956920d4b13a654886caaf4b32d/: script.py
tmp/b786b60f02ea4b46822948530e27fd5c/: script.py  settings.json
tmp/b87329fd9733407ea9456b68edf87fd7/: script.py
tmp/b87329fd9733407ea9456b68edf87fd7/tmp/b87329fd9733407ea9456b68edf87fd7/: settings.json
tmp/bfcb3fba7ca94674a6217a1bc1586a4a/: script.py
