[metadata]
name = eicl
version = 0.0.1
description =
long_description = file: README.md
LICENSE = MIT License
long_description_content_type = text/markdown
Author = akil-krsna, pupper emeritus, adhit-420, rishik00
platform = linux, windows
keywords = command line interface, overclocking, efficiency, performance, benchmarking, energy